--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.0",
+    "bootstrap": "^4.2.1",
+    "@angular/cdk": "^13.2.6",
     "@angular/common": "~12.1.0",
     "@angular/compiler": "~12.1.0",
     "@angular/core": "~12.1.0",
@@ -47,7 +49,7 @@
     "eslint-plugin-promise": "^5.1.0",
     "git-commit-msg-linter": "^3.2.6",
     "husky": "^7.0.1",
-    "jasmine-core": "~3.7.0",
+    "jasmine-core": "~3.8.0",
     "karma": "^6.3.16",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
