--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.0",
-    "bootstrap": "^4.2.1",
     "@angular/cdk": "^13.2.6",
     "@angular/common": "~12.1.0",
     "@angular/compiler": "~12.1.0",
@@ -23,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
     "@auth0/angular-jwt": "^2.1.0",
+    "bootstrap": "^4.2.1",
     "date-fns": "^2.16.1",
     "date-fns-tz": "^1.0.12",
     "primeflex": "^2.0.0",
@@ -31,6 +31,7 @@
     "rxjs": "~6.6.0",
     "toastr": "^2.1.4",
     "tslib": "^2.2.0",
+    "xlsx": "^0.18.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
