--- a/angular.json
+++ b/angular.json
@@ -82,6 +82,15 @@
                   "with": "src/environments/environment.hml.ts"
                 }
               ]
+            },
+            "ga": {
+              "outputPath": "C:/xampp/htdocs/intranet/app/dctf",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.hml.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
