--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "gd": "ng build --configuration ga",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -21,7 +22,7 @@
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
-    "@auth0/angular-jwt": "^2.1.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "bootstrap": "^4.2.1",
     "date-fns": "^2.16.1",
     "date-fns-tz": "^1.0.12",
