--- a/angular.json
+++ b/angular.json
@@ -70,6 +70,24 @@
                   "with": "src/environments/environment.hml.ts"
                 }
               ]
+            },
+            "jenkins-hml": {
+              "outputPath": "/var/www/html/intranet/app/dctfweb",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.jenkins-hml.ts"
+                }
+              ]
+            },
+            "jf": {
+              "outputPath": "E:/cgcontadores/backend/intranet/app/dctfweb",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.jf.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
