feat(IN-875): ajustes e melhorias de filtros

--- a/angular.json
+++ b/angular.json
@@ -88,7 +88,10 @@
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.hml.ts",
+                  "with": "src/environments/environment.hml.ts"
+                }
+              ]
+              },
             "jenkins-hml": {
               "outputPath": "/var/www/html/intranet/app/dctfweb",
               "fileReplacements": [
