fix: correcao de sintaxe no angular.json - build #5

--- a/angular.json
+++ b/angular.json
@@ -1,8 +1,5 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "cli": {
-    "analytics": false
-  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
@@ -88,7 +85,10 @@
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.hml.ts",
+                  "with": "src/environments/environment.hml.ts"
+                }
+              ]
+            },
             "jenkins-hml": {
               "outputPath": "/var/www/html/intranet/app/dctfweb",
               "fileReplacements": [
@@ -103,7 +103,7 @@
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.jf.ts",
+                  "with": "src/environments/environment.jf.ts"
                 }
               ]
             }
