--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "ng test",
     "lint": "npx eslint --fix src/**/*.ts",
     "jenkins-hml": "ng build --configuration jenkins-hml",
-    "jf": "ng build --configuration jf"
+    "jf": "ng build --configuration jf",
+    "jf:w": "ng build --watch --configuration jf"
   },
   "private": true,
   "dependencies": {
